--- a/app/src/main/res/layout/answercard.xml
+++ b/app/src/main/res/layout/answercard.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/deck_answer_box"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/deckborder"
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:background="@color/colorPrimary"
         android:fontFamily="sans-serif-smallcaps"
         android:gravity="center_vertical"
-        android:text="Answer"
+        android:text="@string/card_answer"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="24sp"
@@ -38,7 +35,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:ems="10"
-        android:hint="Card Answer"
+        android:hint="@string/card_answer2"
         android:inputType="text" />
 
 </LinearLayout>
