--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -18,7 +18,6 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/solo_img"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical|center_horizontal"
@@ -36,7 +35,6 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/solotxt"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="bottom"
@@ -44,18 +42,17 @@
                 android:paddingLeft="20dp"
                 android:paddingStart="20dp"
                 android:paddingTop="30dp"
-                android:text="Singleplayer"
+                android:text="@string/menu_singleplayer"
                 android:textColor="@android:color/black"
                 android:textSize="24sp" />
 
             <TextView
-                android:id="@+id/playsolotxt2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="start"
                 android:paddingLeft="20dp"
-                android:text="Bring a deck into solo play"
+                android:text="@string/menu_singleplayerdesc"
                 android:textAlignment="textStart"
                 android:textAllCaps="false"
                 android:textColor="@android:color/darker_gray"
@@ -74,7 +71,6 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/deck_img"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical|center_horizontal"
@@ -93,7 +89,6 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/decktxt"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="bottom"
@@ -101,18 +96,17 @@
                 android:paddingLeft="20dp"
                 android:paddingStart="20dp"
                 android:paddingTop="30dp"
-                android:text="Player Deck"
+                android:text="@string/menu_deckedit"
                 android:textColor="@android:color/black"
                 android:textSize="24sp" />
 
             <TextView
-                android:id="@+id/deckstxt2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="start"
                 android:paddingLeft="20dp"
-                android:text="Edit, create or share decks"
+                android:text="@string/menu_deckeditdesc"
                 android:textAlignment="textStart"
                 android:textAllCaps="false"
                 android:textColor="@android:color/darker_gray"
@@ -131,7 +125,6 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/profile_img"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical|center_horizontal"
@@ -149,7 +142,6 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/profiletxt"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="bottom"
@@ -157,18 +149,17 @@
                 android:paddingLeft="20dp"
                 android:paddingStart="20dp"
                 android:paddingTop="30dp"
-                android:text="Profile"
+                android:text="@string/menu_profile"
                 android:textColor="@android:color/black"
                 android:textSize="24sp" />
 
             <TextView
-                android:id="@+id/profiletxt2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="start"
                 android:paddingLeft="20dp"
-                android:text="View your personalized stats"
+                android:text="@string/menu_profiledesc"
                 android:textAlignment="textStart"
                 android:textAllCaps="false"
                 android:textColor="@android:color/darker_gray"
@@ -187,7 +178,6 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/community_img"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical|center_horizontal"
@@ -205,7 +195,6 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/communitytxt"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="bottom"
@@ -213,18 +202,17 @@
                 android:paddingLeft="20dp"
                 android:paddingStart="20dp"
                 android:paddingTop="30dp"
-                android:text="Community Decks"
+                android:text="@string/menu_community"
                 android:textColor="@android:color/black"
                 android:textSize="24sp" />
 
             <TextView
-                android:id="@+id/communitytxt2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="start"
                 android:paddingLeft="20dp"
-                android:text="Download decks from the community"
+                android:text="@string/menu_communitydesc"
                 android:textAlignment="textStart"
                 android:textAllCaps="false"
                 android:textColor="@android:color/darker_gray"
@@ -243,7 +231,6 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/logout_img"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical|center_horizontal"
@@ -261,7 +248,6 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/logouttxt"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="bottom"
@@ -269,18 +255,17 @@
                 android:paddingLeft="20dp"
                 android:paddingStart="20dp"
                 android:paddingTop="30dp"
-                android:text="Logout"
+                android:text="@string/menu_logout"
                 android:textColor="@android:color/black"
                 android:textSize="24sp" />
 
             <TextView
-                android:id="@+id/logouttxt2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="start"
                 android:paddingLeft="20dp"
-                android:text="Exit to the login screen"
+                android:text="@string/menu_logoutdesc"
                 android:textAlignment="textStart"
                 android:textAllCaps="false"
                 android:textColor="@android:color/darker_gray"
