--- a/app/src/main/res/layout/cardjump.xml
+++ b/app/src/main/res/layout/cardjump.xml
@@ -1,32 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_creation_box"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/deckborder"
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/edit_front"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:layout_weight="1"
         android:background="@color/colorPrimary"
         android:fontFamily="sans-serif-smallcaps"
         android:gravity="center_vertical"
-        android:text="Jump To"
+        android:text="@string/card_jump"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="24sp"
         android:typeface="serif" />
 
     <android.support.v4.widget.NestedScrollView
-        android:id="@+id/card_list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
