--- a/app/src/main/res/layout/createcard.xml
+++ b/app/src/main/res/layout/createcard.xml
@@ -1,25 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_creation_box"
     android:layout_width="match_parent"
     android:layout_height="125dp"
-    android:background="@color/deckborder"
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/edit_front"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:layout_weight="1"
         android:background="@color/colorPrimary"
         android:fontFamily="sans-serif-smallcaps"
         android:gravity="center_vertical"
-        android:text="Card Creation"
+        android:text="@string/card_create"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="24sp"
@@ -29,25 +21,19 @@
         android:id="@+id/edit_front"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:layout_weight="1"
         android:ems="10"
         android:fontFamily="monospace"
-        android:hint="Front Text"
+        android:hint="@string/card_front"
         android:inputType="textPersonName" />
 
     <EditText
         android:id="@+id/edit_back"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:layout_weight="1"
         android:ems="10"
         android:fontFamily="monospace"
-        android:hint="Back Text"
+        android:hint="@string/card_back"
         android:inputType="textPersonName" />
 </LinearLayout>
