--- a/app/src/main/res/layout/decklayout.xml
+++ b/app/src/main/res/layout/decklayout.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/mainBox"
     android:layout_width="match_parent"
     android:layout_height="75dp"
     android:layout_marginLeft="20dp"
@@ -25,27 +24,28 @@
         android:textStyle="bold" />
 
     <ImageView
-        android:id="@+id/upload_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
         android:layout_marginStart="34dp"
         android:visibility="invisible"
-        app:srcCompat="@drawable/download" />
+        app:srcCompat="@drawable/download"
+        android:layout_marginLeft="34dp"
+        android:layout_alignParentLeft="true" />
 
     <ImageView
-        android:id="@+id/delete_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:layout_marginEnd="26dp"
         android:visibility="invisible"
-        app:srcCompat="@drawable/delete" />
+        app:srcCompat="@drawable/delete"
+        android:layout_marginRight="26dp"
+        android:layout_alignParentRight="true" />
 
     <RelativeLayout
-        android:id="@+id/left"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
